--- a/styles/Search_results.module.css
+++ b/styles/Search_results.module.css
@@ -1,6 +1,11 @@
 
-
 .searchForm {
     margin: 10px;
 }
 
+.searchTitleSection {
+    margin: 20px;
+}
+.searchTitleSection h3 {
+    margin: 15px 0 0 10px;
+}
