--- a/styles/Search.module.css
+++ b/styles/Search.module.css
@@ -1,25 +1,53 @@
 .main {
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+}
+
+.searchForm {
+  margin-top: 10px;
 }
 
 .searchInput {
-  display: flex;
-  height:6vh;
-  width: 60vw;
-  margin-top: 200px;
+  height:40px;
+  width: 400px;
+  
 }
 
 .searchButton {
-  margin-top: 5px;
-  height: 3vh;
-  width: 60vw;
-  position: absolute;
+  height: 30px;
+  width: 30px;
+  margin-left: 2px;
+}
+
+
+.listSection {
   display: flex;
   justify-content: center;
-  align-items: center;
+}
+
+.listDiv {
+  border: solid 1px white;
+  width: 800px;
+  display: flex;
+  justify-content: center;
+  padding: 5px;
+}
+
+
+.movies {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  grid-gap: 10px; 
+  list-style-type: none; 
+}
+
+.tiles {
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: black;
 }
