--- a/styles/Search_results.module.css
+++ b/styles/Search_results.module.css
@@ -55,8 +55,9 @@
 }
 
 .tiles a:hover {
-    cursor: default;
+    cursor: pointer;
     color:dodgerblue;
+
 }
 
 .info {
@@ -86,3 +87,6 @@
     cursor: default;
 }
 
+.poster {
+    margin-top: 4px;
+  }
